--- a/SAE 1.5/index.html
+++ b/SAE 1.5/index.html
@@ -56,6 +56,7 @@
             </article>
         </main>
         <footer>
+            <h2>Contact</h2>
             <ul id="contact">
                 <li><a href="mailto:">entreprise@gmail.com</a></li>
                 <li><a href="tel:">+33 (0)8 05 58 09 90</a></li>
