--- a/SAE 1.5/index.html
+++ b/SAE 1.5/index.html
@@ -32,6 +32,31 @@
             </nav>
         </header>
         <main>
+<style>
+    .intro-section {
+    color:black;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.intro-section > img {
+    width:30%;
+}
+
+.intro-section > div {
+    width:40%;
+    color:black;
+}
+</style>
+
+ <section class="intro-section">
+                <img id="img-banniere" src="images/banniere.png" alt="">
+                <div>
+                    <h1>NE PAS OUBLIER VALDATEUR HTML & CSS</h1>
+                    <a href="#début" class="button-gold">Explorer</a>
+                </div>
+</section>
+            
             <div>
                 <img id="img-banniere" src="images/banniere.png" alt="">
             </div>
