--- a/SAE 1.5/index.html
+++ b/SAE 1.5/index.html
@@ -52,7 +52,7 @@
  <section class="intro-section">
                 <img id="img-banniere" src="images/banniere.png" alt="">
                 <div>
-                    <h1>NE PAS OUBLIER VALDATEUR HTML & CSS</h1>
+                    <h1 style="color: white;">NE PAS OUBLIER VALDATEUR HTML & CSS</h1>
                     <a href="#début" class="button-gold">Explorer</a>
                 </div>
 </section>
