--- a/SAE 1.5/index.html
+++ b/SAE 1.5/index.html
@@ -38,126 +38,9 @@
             <img id="img-banniere" src="images/banniere.png" alt="">
             <div>
                 <h1 style="color: white;">NE PAS OUBLIER VALDATEUR HTML & CSS</h1>
-                <a href="#début" class="button-gold">Explorer</a>
-            </div>
-        </section>
-
-        <article id="début">
-            <img src="images/logo.jpg" class="image-seule right" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi erat sem, rhoncus sed viverra eget,
-                placerat a risus. Nunc imperdiet velit et scelerisque varius. Morbi faucibus vitae ipsum vel pretium.
-                Fusce iaculis facilisis sempre. Cras sagittis, augue eget rutrum vestibulum, ligula sapien ultricies
-                felis, a hendrerit neque libero ut purus. Sed eleifend justo ultricies dolor eleifend, nec pellentesque
-                leo egestas. Etiam ultricies ac eros eget mattis. L'efficacité du vestibule est élevée en cas de
-                suspicion. Nulla auctor eu nulla quis pulvinar. Efficitur entier mi id leo conséquat volutpat. Vivamus
-                ullamcorper, nisi vel suscipit viverra, libero turpis feugiat eros, a blandit eros odio ut erat. Nulla
-                sagittis eget turpis eu malesuada. Curabitur condimentum ornare tellus. Curabitur in venenatis ipsum,
-                sed hendrerit augue. Donec a eros nec leo efficitur congue eget finibus nisl. Phasellus euismod tellus
-                eget sodales tincidunt. Pellentesque pulvinar faucibus dapibus. Vestibulum lectus erat, commodo vitae
-                magna et, auctor vehicula metus. Curabitur quam mi, pharetra ut odio sit amet, maximus consequat dui.
-                Vestibulum luctus placerat sapien sed tempus. Proin efficitur, lorem eget vehicula molestie, turpis urna
-                convallis enim, sed condimentum ante nisi sit amet eros. Cras diam augue, auctor ut urna at, vehicula
-                bibendum lacus. Etiam Placerat Felis et Tortor Lobortis Laoreet. Proin eu neque eget justo dignissim
-                pulvinar sit amet a leo. Sed eget mi orci. </p>
-        </article>
-        <article id="milieu">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi erat sem, rhoncus sed viverra eget,
-                placerat a risus. Nunc imperdiet velit et scelerisque varius. Morbi faucibus vitae ipsum vel pretium.
-                Fusce iaculis facilisis sempre. Cras sagittis, augue eget rutrum vestibulum, ligula sapien ultricies
-                felis, a hendrerit neque libero ut purus. Sed eleifend justo ultricies dolor eleifend, nec pellentesque
-                leo egestas. Etiam ultricies ac eros eget mattis. L'efficacité du vestibule est élevée en cas de
-                suspicion. Nulla auctor eu nulla quis pulvinar. Efficitur entier mi id leo conséquat volutpat. Vivamus
-                ullamcorper, nisi vel suscipit viverra, libero turpis feugiat eros, a blandit eros odio ut erat. Nulla
-                sagittis eget turpis eu malesuada. Curabitur condimentum ornare tellus. Curabitur in venenatis ipsum,
-                sed hendrerit augue. Donec a eros nec leo efficitur congue eget finibus nisl. Phasellus euismod tellus
-                eget sodales tincidunt. Pellentesque pulvinar faucibus dapibus. Vestibulum lectus erat, commodo vitae
-                magna et, auctor vehicula metus. Curabitur quam mi, pharetra ut odio sit amet, maximus consequat dui.
-                Vestibulum luctus placerat sapien sed tempus. Proin efficitur, lorem eget vehicula molestie, turpis urna
-                convallis enim, sed condimentum ante nisi sit amet eros. Cras diam augue, auctor ut urna at, vehicula
-                bibendum lacus. Etiam Placerat Felis et Tortor Lobortis Laoreet. Proin eu neque eget justo dignissim
-                pulvinar sit amet a leo. Sed eget mi orci. </p>
-            <div style="justify-content: space-evenly; display: flex;">
-                <img src="images/logo.jpg" class="triple-image" alt="">
-                <img src="images/logo.jpg" class="triple-image" alt="">
-                <img src="images/logo.jpg" class="triple-image" alt="">
-            </div>
-        </article>
-        <article id="fin">
-            <img src="images/logo.jpg" class="image-seule left" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi erat sem, rhoncus sed viverra eget,
-                placerat a risus. Nunc imperdiet velit et scelerisque varius. Morbi faucibus vitae ipsum vel pretium.
-                Fusce iaculis facilisis sempre. Cras sagittis, augue eget rutrum vestibulum, ligula sapien ultricies
-                felis, a hendrerit neque libero ut purus. Sed eleifend justo ultricies dolor eleifend, nec pellentesque
-                leo egestas. Etiam ultricies ac eros eget mattis. L'efficacité du vestibule est élevée en cas de
-                suspicion. Nulla auctor eu nulla quis pulvinar. Efficitur entier mi id leo conséquat volutpat. Vivamus
-                ullamcorper, nisi vel suscipit viverra, libero turpis feugiat eros, a blandit eros odio ut erat. Nulla
-                sagittis eget turpis eu malesuada. Curabitur condimentum ornare tellus. Curabitur in venenatis ipsum,
-                sed hendrerit augue. Donec a eros nec leo efficitur congue eget finibus nisl. Phasellus euismod tellus
-                eget sodales tincidunt. Pellentesque pulvinar faucibus dapibus. Vestibulum lectus erat, commodo vitae
-                magna et, auctor vehicula metus. Curabitur quam mi, pharetra ut odio sit amet, maximus consequat dui.
-                Vestibulum luctus placerat sapien sed tempus. Proin efficitur, lorem eget vehicula molestie, turpis urna
-                convallis enim, sed condimentum ante nisi sit amet eros. Cras diam augue, auctor ut urna at, vehicula
-                bibendum lacus. Etiam Placerat Felis et Tortor Lobortis Laoreet. Proin eu neque eget justo dignissim
-                pulvinar sit amet a leo. Sed eget mi orci. </p>
-            <div class="button-gold">
-                <a href="#reserveration">Réserver</a>
-            </div>
-        </article>
-    </main>
-    <footer>
-        <h2>Contact</h2>
-        <ul id="contact">
-            <li><a href="mailto:">entreprise@gmail.com</a></li>
-            <li><a href="tel:">+33 (0)8 05 58 09 90</a></li>
-            <li>PasquierVille</li>
-            <li>Grondin</li>
-            <li>13966</li>
-            <li>France</li>
-        </ul>
-    </footer>
-</body>
-
-</html><!DOCTYPE html>
-<html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-    <header>
-        <img src="images/logo.svg" id="logo" alt="logo" href="#">
-        <nav>
-            <ul>
-                <li>
-                    <a href="">Histoire</a>
-                    <ul>
-                        <li><a href="#début">Oups...</a></li>
-                        <li><a href="#milieu">L'échappatoire</a></li>
-                        <li><a href="#fin">Liberté !</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="">Réservation</a>
-                </li>
-                <li>
-                    <a href="">Nos autres campus</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="intro-section">
-            <img id="img-banniere" src="images/banniere.png" alt="">
-            <div>
-                <h1 style="color: white;">NE PAS OUBLIER VALDATEUR HTML & CSS</h1>
-                <a href="#début" class="button-gold">Explorer</a>
+                <div class="button-gold">
+                    <a href="#début">Découvrir</a>
+                </div>
             </div>
         </section>
 
