--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <img src="images/logo.svg" id="logo" alt="logo" href="#">
+            <img src="images/logo.svg" id="logo" alt="logo">
             <nav>
                 <ul>
                     <li>
