--- a/SAE 1.5/index.html
+++ b/SAE 1.5/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="images/logo.svg" id="logo" alt="logo" href="#">
+        <img src="images/logo.svg" id="logo" alt="logo">
         <nav>
             <ul>
                 <li>
