--- a/SAE 1.5/index.html
+++ b/SAE 1.5/index.html
@@ -44,7 +44,7 @@
             </div>
         </section>
 
-        <article id="début">
+        <section id="début">
             <img src="images/logo.jpg" class="image-seule right" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi erat sem, rhoncus sed viverra eget,
                 placerat a risus. Nunc imperdiet velit et scelerisque varius. Morbi faucibus vitae ipsum vel pretium.
@@ -61,8 +61,8 @@
                 convallis enim, sed condimentum ante nisi sit amet eros. Cras diam augue, auctor ut urna at, vehicula
                 bibendum lacus. Etiam Placerat Felis et Tortor Lobortis Laoreet. Proin eu neque eget justo dignissim
                 pulvinar sit amet a leo. Sed eget mi orci. </p>
-        </article>
-        <article id="milieu">
+        </section>
+        <section id="milieu">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi erat sem, rhoncus sed viverra eget,
                 placerat a risus. Nunc imperdiet velit et scelerisque varius. Morbi faucibus vitae ipsum vel pretium.
                 Fusce iaculis facilisis sempre. Cras sagittis, augue eget rutrum vestibulum, ligula sapien ultricies
@@ -83,8 +83,8 @@
                 <img src="images/logo.jpg" class="triple-image" alt="">
                 <img src="images/logo.jpg" class="triple-image" alt="">
             </div>
-        </article>
-        <article id="fin">
+        </section>
+        <section id="fin">
             <img src="images/logo.jpg" class="image-seule left" alt="">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi erat sem, rhoncus sed viverra eget,
                 placerat a risus. Nunc imperdiet velit et scelerisque varius. Morbi faucibus vitae ipsum vel pretium.
@@ -104,7 +104,7 @@
             <div class="button-gold">
                 <a href="#reserveration">Réserver</a>
             </div>
-        </article>
+        </section>
     </main>
     <footer>
         <h2>Contact</h2>
